--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "groq-sdk": "^0.37.0",
+    "isomorphic-dompurify": "^2.33.0",
     "lucide-react": "^0.468.0",
     "next": "^15.0.5",
     "pg": "^8.16.3",
